updating body copy w/ my details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,25 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hi - I'm Colin and I'm a multi-talented content producer who is very excited to learn how to be a web developer.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born and raised in Maryland. I grew up in Burtonsville, I was shaped in PG County and I currently live in Baltimore.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My favorite hobbies include:
+        <ul>
+          <li>Playing the drums in my band</li>
+          <li>Photography</li>
+          <li>Exercising</li>
+          <li>Hiking</li>
+    
+        </ul>
+      </p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I'd love to have a job where I can work anywhere and set my own hours. I want to be an expert in a field so that people can come to me to find creative solutions to their complex issues</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Baltimore's Canton neighborhood.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I'm excited about the opportunities that will be available to me once I am a full-stack developer.</p>
     </section>
 
     <footer id="footer">
